# drrank

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
example/: example.py  name_example.csv
src/: drrank.py  drrank_distribution.py  drrank_loss.py  drrank_prior.py  simul.py  utils.py
