[build-system]
requires = ["setuptools>=61.0",
    "wheel"
]

build-backend = "setuptools.build_meta"

[project]
name = "drrank"
version = "0.0.2"
authors = [
  { name="Evan K. Rose", email="ekrose@gmail.com" },
]
description = "Implement the Empirical Bayes ranking scheme developed in Kline, Rose, and Walters (2023)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
"numpy",
"pandas",
"scipy>=1.10.1",
"gurobipy>=10.0.1",
"scikit-learn",
"tqdm",
"joblib>=1.1.0",
"patsy>=0.5.2"
"matplotlib",
"seaborn"
]

[project.optional-dependencies]
RPy = ["rpy2>=3.5.13"]

[project.urls]
"Homepage" = "https://github.com/ekrose/drrank"
"Bug Tracker" = "https://github.com/ekrose/drrank/issues"